fixing image name

--- a/shippable.yml
+++ b/shippable.yml
@@ -46,11 +46,18 @@ runtime:
 
 build:
   pre_ci_boot:
-    image_name: drydockaarch64/u16nodeall
+    image_name: drydockaarch64/u16nodall
     image_tag: v6.2.4
   ci:
+    - export IMAGE_NAME=ric03uec/demoblog:ci.$BUILD_NUMBER
     - node --version
     - docker --version
+    - env
     - echo "run some tests here"
     - echo "use shipctl to get registry login"
     - echo "build latest master image and push"
+    #- docker build -t $IMAGE_NAME -f Dockerfile .
+    #- docker push $IMAGE_NAME
+  on_success:
+    - echo "Saving the job version as image tag"
+    #- echo versionName=$IMAGE_NAME > "$JOB_STATE/$IMAGE_BLOG_NAME.env"
