--- a/shippable.yml
+++ b/shippable.yml
@@ -37,8 +37,10 @@ jobs:
           name: deploy_app_image
           script:
             - uname -a
-            - pushd $BUILD_DIR/IN
+            - pushd $BUILD_DIR/IN/aarch64_blog/gitRepo/
             - ls -atlh
+            - ./deploy.sh
+            - popd
 
 ################################################
 ################ CI Config #####################
