--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha"
+    "test": "grunt"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -12,9 +12,14 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "grunt": "^1.0.2",
+    "grunt-express-server": "^0.5.4",
+    "grunt-simple-mocha": "^0.4.1",
+    "istanbul": "^0.4.5",
     "jade": "~1.11.0",
     "mocha": "^5.0.4",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "xunit-file": "^1.0.0"
   }
 }
