--- a/shippable.yml
+++ b/shippable.yml
@@ -68,6 +68,7 @@ build:
     - export XUNIT_FILE=shippable/testresults/result.xml
     - npm test
     - mkdir -p shippable/testresults
+    - ls -atlh
     - mv xunit.xml $XUNIT_FILE
     - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
   on_success:
