hooking up params with app

--- a/shippable.yml
+++ b/shippable.yml
@@ -15,8 +15,9 @@ resources:
     type: params
     versionTemplate:
       params:
-        RUN_MODE: development
+        RUN_MODE: production
         REGION: seattle
+        TITLE: welcome to demo blog
 
   ## PEM key integration to be used to ssh into deployment host
   - name: app_deploy_key
